# Igalima

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dependencies.lua  Igalima.OpenGL.sln  Igalima.OpenGL.vcxproj  Igalima.sln  Igalima.sln.DotSettings  LICENSE  README.md  build-exe.bat  build.bat  build.sh  premake5.lua  project.4coder  setup.bat
Editor/Igalima.Editor/: Igalima.Editor.vcxproj  premake5.lua
Editor/Igalima.Editor/Headers/: EditorApplication.h
Editor/Igalima.Editor/Source/: EditorApplication.cpp  Sample.cpp
Engine/Igalima.Assets/: Igalima.Assets.vcxproj.filters
Engine/Igalima.Audio/: Igalima.Audio.vcxproj
Engine/Igalima.Audio/Headers/: Igalima.Audio.h
Engine/Igalima.Common/: CMakeLists.txt  premake5.lua
Engine/Igalima.Common/Headers/: Types.h
Engine/Igalima.Core/: CMakeLists.txt  Igalima.Core.vcxproj  Igalima.Core.vcxproj.filters  premake5.lua
Engine/Igalima.Core/Headers/: Application.h  EntryPoint.h  Game.h  Igalima.Core.h
Engine/Igalima.Core/Source/: Application.cpp  Game.cpp
Engine/Igalima.Graphics/: CMakeLists.txt  premake5.lua
Engine/Igalima.Math/: Igalima.Math.vcxproj  Igalima.Math.vcxproj.filters
Engine/Igalima.Math/Vectors/: Vector3.h
Engine/Igalima.Win32/: CMakeLists.txt  Igalima.Win32.vcxproj.filters  premake5.lua
Engine/Igalima.Win32/Headers/: Igalima.Win32.h
Engine/Igalima.Win32/Headers/OpenGL/: GLContext.h
Engine/Igalima.Win32/Headers/Window/: WindowCreateInfo.h
Engine/Igalima.Win32/Source/Window/: Window.cpp
Headers/Shaders/: ShaderProgram.h
Igalima.Editor/: Igalima.Editor.csproj  Igalima.Editor.vcxproj  Program.cs
Igalima.Editor.Tests/: Igalima.Editor.Tests.csproj  UnitTest1.cs
Igalima.Engine/: Igalima.Engine.csproj  Igalima.Engine.vcxproj  Window.cs
Igalima.Engine.Tests/: Igalima.Engine.Tests.csproj  UnitTest1.cs
Igalima.Engine.Tests/Injection/: DependencyProviderTests.cs
Igalima.Engine/Common/: Result.cs  ResultStatus.cs
Igalima.Engine/Common/Exceptions/: DependencyNotRegisteredException.cs  PropertyNotWritableException.cs  TypeAlreadyRegisteredException.cs
Igalima.Engine/Common/Extensions/: TypeExtensions.cs
Igalima.Engine/Graphics/Batches/: VertexBatch.cs
Igalima.Engine/Graphics/Primitives/: Triangle.cs
Igalima.Engine/Graphics/Shaders/: IUniform.cs  Shader.cs  Uniform.cs
Igalima.Engine/Graphics/Textures/: Texture.cs
Igalima.Engine/IO/Stores/: ResourceStore.cs
Igalima.Engine/Injection/: DependencyCache.cs  DependencyProvider.cs  InjectAttribute.cs  ResolveAttribute.cs
Igalima.OpenGL/: Igalima.OpenGL.vcxproj  Igalima.OpenGL.vcxproj.filters  imgui.ini
Igalima.OpenGL/Demos/ProceduralTerrainGeneration/: PTG_Scene.cpp  PTG_Scene.h
Igalima.OpenGL/Headers/: Camera.h
Igalima.OpenGL/Headers/Components/: Component.h  Transform.h
Igalima.OpenGL/Headers/Core/: Clock.h
Igalima.OpenGL/Headers/Entities/: Entity.h
Igalima.OpenGL/Headers/Graphics/: Drawable.h  IDrawable.h  Mesh.h  Model.h  Noise.h  Shader.h  Sprite.h  Texture.h
Igalima.OpenGL/Headers/Memory/: Memory.h
Igalima.OpenGL/Headers/OpenGL/: GLColor.h  GLDrawMode.h  GLFramebuffer.h  GLIndexBuffer.h  GLShader.h  GLShaderProgram.h  GLTexture.h  GLVertexArray.h  GLVertexBuffer.h  GLWrapper.h  Texture.h  Vertex.h
Igalima.OpenGL/Headers/Platform/: CycleCounter.h  Window.h
Igalima.OpenGL/Headers/Scenes/: IScene.h  SceneManager.h
Igalima.OpenGL/Headers/Shaders/: Shader.h  ShaderProgram.h
Igalima.OpenGL/Headers/Textures/: Texture.h
Igalima.OpenGL/Resources/: FragmentShader.hlsl  LightCubeFragmentShader.fs  LightFragmentShader.fs  LightMap_Fragment.fs  LightVertexShader.vs  VertexShader.hlsl
Igalima.OpenGL/Resources/Shaders/: DirectionalLight.fs  FragmentShader.fs  PointLight.fs  VertexShader.vs
Igalima.OpenGL/Sources/: Camera.cpp  Igalima.OpenGL.cpp  glad.c
Igalima.OpenGL/Sources/Components/: Component.cpp  Transform.cpp
Igalima.OpenGL/Sources/Core/: Clock.cpp
Igalima.OpenGL/Sources/Graphics/: Cube.cpp  Mesh.cpp  Model.cpp  Noise.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
Igalima.OpenGL/Sources/Memory/: Memory.cpp
Igalima.OpenGL/Sources/OpenGL/: GLFramebuffer.cpp  GLIndexBuffer.cpp  GLShader.cpp  GLShaderProgram.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  GLWrapper.cpp
Igalima.OpenGL/Sources/Platform/: CycleCounter.cpp  Window.cpp
Igalima.OpenGL/Sources/Scenes/: SceneManager.cpp
Igalima.OpenGL/Sources/Shaders/: Shader.cpp  ShaderProgram.cpp
Igalima.OpenGL/Sources/Textures/: Texture.cpp
Igalima.Resources/: Igalima.Resources.csproj  IgalimaResourcesAssembly.cs
Igalima.Resources/Shaders/: Sh_Triangle.fs  Sh_Triangle.vs
Libraries/Glad/: CMakeLists.txt  premake5.lua
Libraries/Includes/glad/: glad.h
Libraries/hostfxr/: CMakeLists.txt  premake5.lua
Libraries/hostfxr/include/hostfxr/: coreclr_delegates.h  hostfxr.h
Scripting/Igalima.Engine/: CMakeLists.txt  Igalima.Engine.csproj  Main.cs  premake5.lua
Scripting/Igalima.Scripting/: CMakeLists.txt  Igalima.Scripting.vcxproj  premake5.lua
Scripting/Igalima.Scripting/Source/: Sample.cpp
Source/Editor/Igalima.Editor/: Igalima.Editor.vcxproj  main.cpp
Source/Engine/Igalima.Assets/: Igalima.Assets.vcxproj
Source/Engine/Igalima.Audio/: Igalima.Audio.vcxproj.filters
Source/Engine/Igalima.Core/: Igalima.Core.vcxproj
Source/Engine/Igalima.Graphics/: Igalima.Graphics.vcxproj  Igalima.Graphics.vcxproj.filters
Source/Engine/Igalima.Math/: Igalima.Math.vcxproj  Igalima.Math.vcxproj.filters  test.cpp
Source/Engine/Igalima.Scripting/: Igalima.Scripting.vcxproj  (+1 more)
Sources/: glad.c  main.cpp
Sources/Common/: Igalima.h  Static.h  Types.h
Sources/Math/: Vector2.h  Vector3.h
Sources/Memory/: Allocator.cpp  Allocator.h  StackAllocator.cpp  StackAllocator.h
Sources/OS/: Win32.cpp  Win32.h  Win32Window.cpp  Win32Window.h  glad.h
Sources/OpenGL/: GLIndexBuffer.cpp  GLIndexBuffer.h  GLLoader.cpp  GLLoader.h  GLShader.cpp  GLShader.h  GLVertex.cpp  GLVertex.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Sources/Platform/: Window.cpp  Window.h
Sources/Renderer/: Renderer.cpp  Renderer.h
(+74 files in other folders)
