CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT("Igalima" LANGUAGES CSharp CXX)

SET(CMAKE_GENERATOR_PLATFORM "x64")
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(PREDEFINED_TARGETS_FOLDER "CmakeCustomTargets")

IF(CMAKE_GENERATOR_PLATFORM STREQUAL "x64")
  SET(CMAKE_CSharp_FLAGS "/platform:x64")
ELSEIF(CMAKE_GENERATOR_PLATFORM STREQUAL "Win32")
    SET(CMAKE_CSharp_FLAGS "/platform:x86")
ELSE()
  MESSAGE(WARNING "Generator platform is set to '${CMAKE_GENERATOR_PLATFORM}', which is not supported by managed projects. Defaulting to 'AnyCPU'...")
  SET(CMAKE_CSharp_FLAGS "/platform:AnyCPU")
ENDIF()

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/binaries/")

SET(CMAKE_INSTALL_BINARY_DIR    "bin/")
SET(CMAKE_INSTALL_LIBRARY_DIR   "bin/")
SET(CMAKE_INSTALL_INCLUDE_DIR   "include/")
SET(CMAKE_INSTALL_EXPORT_DIR    "cmake/")

ADD_SUBDIRECTORY("Libraries/hostfxr")
ADD_SUBDIRECTORY("Libraries/Glad")
ADD_SUBDIRECTORY("Engine/Igalima.Core")
ADD_SUBDIRECTORY("Engine/Igalima.Win32")
ADD_SUBDIRECTORY("Scripting/Igalima.Engine")
ADD_SUBDIRECTORY("Scripting/Igalima.Scripting")
